--- a/main/templates/admin/admin.html
+++ b/main/templates/admin/admin.html
@@ -17,6 +17,7 @@
 
   <div class="row text-center">
     {{admin_link('User List', 'group', url_for('user_list', order='-modified', active=True))}}
+    {{admin_link('Drawing', 'image', url_for('admin_drawing_list'))}}
   </div>
 
   <div class="page-header">
