--- a/main/templates/bit/header.html
+++ b/main/templates/bit/header.html
@@ -11,6 +11,9 @@
     </div>
     <nav class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
+        <li class="{{'active' if html_class == 'drawing-list'}}">
+          <a href="{{url_for('drawing_list')}}"><span class="fa fa-fw fa-image"></span> Drawing List</a>
+        </li>
         # include 'bit/contact_menu.html'
       </ul>
       <ul class="nav navbar-nav navbar-right">
