--- a/main/templates/welcome.html
+++ b/main/templates/welcome.html
@@ -4,38 +4,38 @@
   <div class="jumbotron">
     <div class="container">
       <h1>{{config.CONFIG_DB.brand_name}}</h1>
-      <p>Hello, world!</p>
+      <p class="lead">Use it with care!</p>
     </div>
   </div>
 # endblock
 
 # block content
   <div class="row">
-    <div class="col-lg-6">
+    <div class="col-md-10">
       <div class="panel panel-success">
         <div class="panel-heading"><h4>POST</h4></div>
         <div class="panel-body">
-          <p>Example URL</p>
-          <pre>{{request.url[:-1]}}{{url_for('api.create', drawing_hash="9bb58f26192e4ba00f01e2e7b136bbd8")}}</pre>
+          <p>Example endpoint URL</p>
+          <pre>{{request.url[:-1]}}{{url_for('api.create', drawing_hash="7a95cd6b4d9cd7dda666592dc9077fe5")}}</pre>
 
-          <h4>Payload</h4>
-          <p>Example payloed. Should match the <code>SHA-1</code> hash of the URL</p>
-          <pre>json: {"foo":"bar"}</pre>
+          <h4>JSON Payload</h4>
+          <p>Example payload. Should match the <code>SHA-1</code> hash of the URL</p>
+          <pre>{"appState":{"currentItemBackgroundColor":"#fa5252","currentItemFont":"20px Virgil","currentItemStrokeColor":"#000000","cursorX":83,"cursorY":45,"draggingElement":null,"elementType":"selection","exportBackground":true,"name":"excalidraw-202011771944","resizingElement":null,"scrollX":0,"scrollY":0,"viewBackgroundColor":"#ffffff"},"elements":[{"backgroundColor":"#228be6","fillStyle":"hachure","height":143,"id":"dmzkpV-_QTKxlUAQygXWi","isSelected":false,"opacity":100,"roughness":1,"seed":1858049663,"strokeColor":"#000000","strokeWidth":1,"type":"rectangle","width":142,"x":294,"y":150},{"backgroundColor":"#82c91e","fillStyle":"hachure","height":173,"id":"KLlna9NL3CbRjQSRaQ644","isSelected":false,"opacity":100,"roughness":1,"seed":1827075854,"strokeColor":"#000000","strokeWidth":1,"type":"diamond","width":214,"x":458,"y":142},{"backgroundColor":"#fa5252","fillStyle":"hachure","height":193,"id":"L7Nb65MoeEYB-8QTPRckP","isSelected":false,"opacity":100,"roughness":1,"seed":1668596637,"strokeColor":"#000000","strokeWidth":1,"type":"ellipse","width":214,"x":684,"y":133}],"source":"https://www.excalidraw.com","version":1}</pre>
 
           <p>If the hash already exists it will return the <code>JSON</code> as response</p>
         </div>
       </div>
     </div>
-    <div class="col-lg-6">
+    <div class="col-md-offset-2 col-md-10">
       <div class="panel panel-info">
         <div class="panel-heading"><h4>GET</h4></div>
         <div class="panel-body">
-          <p>Example URL</p>
-          <pre>{{request.url[:-1]}}{{url_for('api.hash', drawing_hash="9bb58f26192e4ba00f01e2e7b136bbd8")}}</pre>
+          <p>Example endpoint URL</p>
+          <pre>{{request.url[:-1]}}{{url_for('api.hash', drawing_hash="7a95cd6b4d9cd7dda666592dc9077fe5")}}</pre>
 
-          <h3>Response</h3>
+          <h4>Response</h4>
           <p>Example response. If the hash is found it will return the <code>JSON</code>. Otherwise <code>404</code>.</p>
-          <pre>{"foo":"bar"}</pre>
+          <pre>{"appState":{"currentItemBackgroundColor":"#fa5252","currentItemFont":"20px Virgil","currentItemStrokeColor":"#000000","cursorX":83,"cursorY":45,"draggingElement":null,"elementType":"selection","exportBackground":true,"name":"excalidraw-202011771944","resizingElement":null,"scrollX":0,"scrollY":0,"viewBackgroundColor":"#ffffff"},"elements":[{"backgroundColor":"#228be6","fillStyle":"hachure","height":143,"id":"dmzkpV-_QTKxlUAQygXWi","isSelected":false,"opacity":100,"roughness":1,"seed":1858049663,"strokeColor":"#000000","strokeWidth":1,"type":"rectangle","width":142,"x":294,"y":150},{"backgroundColor":"#82c91e","fillStyle":"hachure","height":173,"id":"KLlna9NL3CbRjQSRaQ644","isSelected":false,"opacity":100,"roughness":1,"seed":1827075854,"strokeColor":"#000000","strokeWidth":1,"type":"diamond","width":214,"x":458,"y":142},{"backgroundColor":"#fa5252","fillStyle":"hachure","height":193,"id":"L7Nb65MoeEYB-8QTPRckP","isSelected":false,"opacity":100,"roughness":1,"seed":1668596637,"strokeColor":"#000000","strokeWidth":1,"type":"ellipse","width":214,"x":684,"y":133}],"source":"https://www.excalidraw.com","version":1}</pre>
         </div>
       </div>
     </div>
