--- a/main/templates/welcome.html
+++ b/main/templates/welcome.html
@@ -19,7 +19,7 @@
           <pre>{{request.url[:-1]}}{{url_for('api.create', drawing_hash="7a95cd6b4d9cd7dda666592dc9077fe5")}}</pre>
 
           <h4>JSON Payload</h4>
-          <p>Example payload. Should match the<code>SHA-1</code> hash of the URL (<a href="https://www.npmjs.com/package/sha1">npm package</a>)</p>
+          <p>Example `JSON` payload. Should match the<code>SHA-1</code> hash of the URL (<a href="https://www.npmjs.com/package/sha1">npm package</a>)</p>
           <pre>{"appState":{"currentItemBackgroundColor":"#fa5252","currentItemFont":"20px Virgil","currentItemStrokeColor":"#000000","cursorX":83,"cursorY":45,"draggingElement":null,"elementType":"selection","exportBackground":true,"name":"excalidraw-202011771944","resizingElement":null,"scrollX":0,"scrollY":0,"viewBackgroundColor":"#ffffff"},"elements":[{"backgroundColor":"#228be6","fillStyle":"hachure","height":143,"id":"dmzkpV-_QTKxlUAQygXWi","isSelected":false,"opacity":100,"roughness":1,"seed":1858049663,"strokeColor":"#000000","strokeWidth":1,"type":"rectangle","width":142,"x":294,"y":150},{"backgroundColor":"#82c91e","fillStyle":"hachure","height":173,"id":"KLlna9NL3CbRjQSRaQ644","isSelected":false,"opacity":100,"roughness":1,"seed":1827075854,"strokeColor":"#000000","strokeWidth":1,"type":"diamond","width":214,"x":458,"y":142},{"backgroundColor":"#fa5252","fillStyle":"hachure","height":193,"id":"L7Nb65MoeEYB-8QTPRckP","isSelected":false,"opacity":100,"roughness":1,"seed":1668596637,"strokeColor":"#000000","strokeWidth":1,"type":"ellipse","width":214,"x":684,"y":133}],"source":"https://www.excalidraw.com","version":1}</pre>
 
           <p>If the hash already exists it will return the <code>JSON</code> as response</p>
@@ -34,7 +34,7 @@
           <pre>{{request.url[:-1]}}{{url_for('api.hash', drawing_hash="7a95cd6b4d9cd7dda666592dc9077fe5")}}</pre>
 
           <h4>Response</h4>
-          <p>Example response. If the hash is found it will return the <code>JSON</code>. Otherwise <code>404</code>.</p>
+          <p>Example `JSON` response. If the hash is found it will return the <code>JSON</code>. Otherwise <code>404</code>.</p>
           <pre>{"appState":{"currentItemBackgroundColor":"#fa5252","currentItemFont":"20px Virgil","currentItemStrokeColor":"#000000","cursorX":83,"cursorY":45,"draggingElement":null,"elementType":"selection","exportBackground":true,"name":"excalidraw-202011771944","resizingElement":null,"scrollX":0,"scrollY":0,"viewBackgroundColor":"#ffffff"},"elements":[{"backgroundColor":"#228be6","fillStyle":"hachure","height":143,"id":"dmzkpV-_QTKxlUAQygXWi","isSelected":false,"opacity":100,"roughness":1,"seed":1858049663,"strokeColor":"#000000","strokeWidth":1,"type":"rectangle","width":142,"x":294,"y":150},{"backgroundColor":"#82c91e","fillStyle":"hachure","height":173,"id":"KLlna9NL3CbRjQSRaQ644","isSelected":false,"opacity":100,"roughness":1,"seed":1827075854,"strokeColor":"#000000","strokeWidth":1,"type":"diamond","width":214,"x":458,"y":142},{"backgroundColor":"#fa5252","fillStyle":"hachure","height":193,"id":"L7Nb65MoeEYB-8QTPRckP","isSelected":false,"opacity":100,"roughness":1,"seed":1668596637,"strokeColor":"#000000","strokeWidth":1,"type":"ellipse","width":214,"x":684,"y":133}],"source":"https://www.excalidraw.com","version":1}</pre>
         </div>
       </div>
