--- a/main/templates/welcome.html
+++ b/main/templates/welcome.html
@@ -2,9 +2,10 @@
 
 # block header
   <div class="jumbotron">
-    <div class="container">
+    <div class="container text-center">
       <h1>{{config.CONFIG_DB.brand_name}}</h1>
       <p class="lead">Use it with care!</p>
+      <p class="lead">Get <a href="https://chrome.google.com/webstore/detail/restman/ihgpcfpkpmdcghlnaofdmjkoemnlijdi?hl=en">RestMan</a> in Chrome to test it.</p>
     </div>
   </div>
 # endblock
