--- a/main/static/src/style/style.less
+++ b/main/static/src/style/style.less
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: 'Virgil';
+  src: url('https://uploads.codesandbox.io/uploads/user/f7fdc300-3c43-44c1-9a59-4338a82a9954/_oPE-FG_Virgil.ttf');
+  font-display: swap;
+}
+
 @import '../../ext/font-awesome/less/font-awesome';
 @import '../../ext/bootstrap/less/bootstrap';
 
