--- a/main/static/src/style/variables.less
+++ b/main/static/src/style/variables.less
@@ -5,6 +5,8 @@
   Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
   'Segoe UI Symbol';
 
+@headings-font-family: 'Virgil', cursive;
+
 @footer-height: @line-height-computed * 5;
 
 @jumbotron-padding: 30px;
