--- a/main/templates/drawing/admin_drawing_list.html
+++ b/main/templates/drawing/admin_drawing_list.html
@@ -11,14 +11,16 @@
       <thead>
         <tr class="text-nowrap">
           <th class="col-xs-1">{{utils.order_by_link('hash', 'Hash')}}</th>
-          <th class="col-xs-9">{{utils.order_by_link('json', 'Json')}}</th>
+          <th class="col-xs-1">{{utils.order_by_link('size', 'Size')}}</th>
+          <th class="col-xs-8">JSON</th>
           <th class="col-xs-2">{{utils.order_by_link('modified', 'Modified')}}<br><small>{{utils.order_by_link('created', 'Created')}}</small></th>
         </tr>
       </thead>
       <tbody>
         # for drawing_db in drawing_dbs
-          <tr class="row-link" id="{{drawing_db.key.urlsafe()}}" data-href="{{url_for('api.hash', drawing_hash=drawing_db.hash)}}">
+          <tr class="row-link" id="{{drawing_db.key.id()}}" data-href="https://excalidraw.com/?id={{drawing_db.key.id()}}">
             <td>{{drawing_db.hash}}</td>
+            <td class="text-right">{{drawing_db.size}}</td>
             <td class="ellipsis">{{drawing_db.json}}</td>
             <td>
               <time datetime="{{drawing_db.modified}}">
