--- a/main/templates/welcome.html
+++ b/main/templates/welcome.html
@@ -16,23 +16,24 @@
 # endblock
 
 # block content
+  <h2>Version 2</h2>
   <div class="row">
     <div class="col-md-9">
       <div class="panel panel-info">
         <div class="panel-heading"><h3>POST</h3></div>
         <div class="panel-body">
           <p>Example endpoint URL</p>
-          <pre>{{request.url[:-1]}}{{url_for('api.create')}}</pre>
+          <pre>{{request.url[:-1]}}{{url_for('api.data.create')}}</pre>
 
-          <h3>JSON Payload</h3>
-          <p>Example <code>JSON</code> payload.</p>
-          <pre>{"appState":{"currentItemBackgroundColor":"#fa5252","currentItemFont":"20px Virgil","currentItemStrokeColor":"#000000","cursorX":83,"cursorY":45,"draggingElement":null,"elementType":"selection","exportBackground":true,"name":"excalidraw-202011771944","resizingElement":null,"scrollX":0,"scrollY":0,"viewBackgroundColor":"#ffffff"},"elements":[{"backgroundColor":"#228be6","fillStyle":"hachure","height":143,"id":"dmzkpV-_QTKxlUAQygXWi","isSelected":false,"opacity":100,"roughness":1,"seed":1858049663,"strokeColor":"#000000","strokeWidth":1,"type":"rectangle","width":142,"x":294,"y":150},{"backgroundColor":"#82c91e","fillStyle":"hachure","height":173,"id":"KLlna9NL3CbRjQSRaQ644","isSelected":false,"opacity":100,"roughness":1,"seed":1827075854,"strokeColor":"#000000","strokeWidth":1,"type":"diamond","width":214,"x":458,"y":142},{"backgroundColor":"#fa5252","fillStyle":"hachure","height":193,"id":"L7Nb65MoeEYB-8QTPRckP","isSelected":false,"opacity":100,"roughness":1,"seed":1668596637,"strokeColor":"#000000","strokeWidth":1,"type":"ellipse","width":214,"x":684,"y":133}],"source":"https://www.excalidraw.com","version":1}</pre>
+          <h3>Binary Payload</h3>
+          <p>Example of <code>binary</code> payload.</p>
+          <pre>1234567890</pre>
 
           <h3>Response</h3>
 <pre>
 {
-  "id": "5646488461901824",
-  "json": "{{url_for('api.id', drawing_id='5646488461901824', _external=True)}}"
+  "id": "5633286537740288",
+  "data": "{{url_for('api.data.id', drawing_id='5633286537740288', _external=True)}}"
 }
 </pre>
         </div>
@@ -43,11 +44,10 @@
         <div class="panel-heading"><h3>GET</h3></div>
         <div class="panel-body">
           <p>Example endpoint URL</p>
-          <pre>{{request.url[:-1]}}{{url_for('api.id', drawing_id="5646488461901824")}}</pre>
-
+          <pre>{{request.url[:-1]}}{{url_for('api.data.id', drawing_id="5633286537740288")}}</pre>
           <h3>Response</h3>
-          <p>Example <code>JSON</code> response. If the hash is found it will return the <code>JSON</code>. Otherwise <code>404</code>.</p>
-          <pre>{"appState":{"currentItemBackgroundColor":"#fa5252","currentItemFont":"20px Virgil","currentItemStrokeColor":"#000000","cursorX":83,"cursorY":45,"draggingElement":null,"elementType":"selection","exportBackground":true,"name":"excalidraw-202011771944","resizingElement":null,"scrollX":0,"scrollY":0,"viewBackgroundColor":"#ffffff"},"elements":[{"backgroundColor":"#228be6","fillStyle":"hachure","height":143,"id":"dmzkpV-_QTKxlUAQygXWi","isSelected":false,"opacity":100,"roughness":1,"seed":1858049663,"strokeColor":"#000000","strokeWidth":1,"type":"rectangle","width":142,"x":294,"y":150},{"backgroundColor":"#82c91e","fillStyle":"hachure","height":173,"id":"KLlna9NL3CbRjQSRaQ644","isSelected":false,"opacity":100,"roughness":1,"seed":1827075854,"strokeColor":"#000000","strokeWidth":1,"type":"diamond","width":214,"x":458,"y":142},{"backgroundColor":"#fa5252","fillStyle":"hachure","height":193,"id":"L7Nb65MoeEYB-8QTPRckP","isSelected":false,"opacity":100,"roughness":1,"seed":1668596637,"strokeColor":"#000000","strokeWidth":1,"type":"ellipse","width":214,"x":684,"y":133}],"source":"https://www.excalidraw.com","version":1}</pre>
+          <p>Example of <code>binary</code> response. If the id is found it will return the <code>data</code>. Otherwise <code>404</code>.</p>
+          <pre>1234567890</pre>
         </div>
       </div>
     </div>
